make TODOLIST Project

--- a/Browser101/TODOLIST/index.html
+++ b/Browser101/TODOLIST/index.html
@@ -23,16 +23,7 @@
       <header class="header">
         <h1>To Do LIST</h1>
       </header>
-      <ul class="items">
-        <!-- <li class="item-row">
-          <div class="item">
-            <span class="item-content">공부</span>
-            <button type="button" class="item-delete">
-              <i class="fas fa-trash-alt"></i>
-            </button>
-          </div>
-        </li> -->
-      </ul>
+      <ul class="items"></ul>
       <footer class="footer">
         <input type="text" class="footer-input" />
         <button type="button" class="footer-button">
