--- a/Browser101/carrot/index.html
+++ b/Browser101/carrot/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <script src="main.js" defer></script>
+    <script type="module" src="src/main.js" defer></script>
     <script
       src="https://kit.fontawesome.com/983f1345cd.js"
       crossorigin="anonymous"
